syntax = "proto3";
import "nanopb.proto";

message Telemetry {
    // message type
    Type type = 1;
    enum Type {
        ZERO = 0;       // null messsage

        RX_HELLO = 1;   // client receives then transmits hello
        TX_HELLO = 2;   // client transmits hello

        RX_ACTION = 3;  // client receives then performs action
    }

    // Payload (send at most one in message)
    MsgHello hello = 2;
    MsgAction action = 3;
}   

message MsgHello {
    string ip = 1 [(nanopb).max_size = 16]; // IP address
    uint32 version = 2 [(nanopb).max_size = 64]; // firmware version
}

message MsgAction {
    Action type = 1;
    enum Action {
        DIGITAL_LOW = 0;
        DIGITAL_HIGH = 1;
    }
    uint32 pin = 2;
}
